<resources>
    <string name="app_name">Tower of Hanoi Pro</string>
    <string name="nothing"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Not connected</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="play_games_connection_error">Unable to sign in to Play Games</string>
    <string name="pick_a_color">Pick a color</string>

    <string name="menu_home">New game</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_connect">Sign in</string>
    <string name="menu_play_games">Play Games</string>
    <string name="menu_achivements">Achievements</string>
    <string name="menu_leaderboards">Leaderboards</string>
    <string name="menu_tuto">Tutorial</string>

    <string name="disk_nb_picker_title">Number of disks</string>
    <string name="disk_nb_picker_ok">Let\'s go !</string>
    <string name="disk_nb_picker_cancel">Cancel</string>
    <string name="pref_drawer_title">Drawer menu</string>
    <string name="pref_drawer_touch">Lock the drawer menu</string>
    <string name="pref_drawer_touch_off">You can swipe to open the menu</string>
    <string name="pref_drawer_touch_on">You need to click on the menu icon to open it</string>
    <string name="pref_numbered_disks">Show number on disks</string>
    <string name="pref_numbered_disks_off">Numbers are hidden</string>
    <string name="pref_numbered_disks_on">Numbers are visible</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_dark">Light/Dark theme</string>
    <string name="pref_theme_dark_option_dark">Dark mode</string>
    <string name="pref_theme_dark_option_light">Light mode</string>
    <string name="pref_theme_style">Theme color</string>
    <string name="pref_theme_style_disk">Disk color</string>
    <string name="pref_theme_apply_app_icon">Apply to app icon (restart required)</string>
    <string name="pref_theme_applied">Icon updated !</string>
    <string name="pref_key_color" translatable="false">prefKeyColor</string>
    <string name="pref_key_color_disk" translatable="false">prefKeyColorDisk</string>
    <string name="pref_apply_app_icon" translatable="false">applyAppIcon</string>
    <string name="pref_gameplay">Gameplay</string>
    <string name="pref_mouvement">Interaction mode</string>
    <string name="pref_mouvement_swipe">Swipe</string>
    <string name="pref_mouvement_touch">Touch</string>

    <string name="quick_touch_enable">Enable Quick touch mode</string>
    <string name="quick_touch_delete">Disable quick touch mode</string>
    <string name="quick_touch_update">Update bounds</string>
    <string name="quick_touch_help">Need help ?</string>
    <string name="quick_touch_first">Draw a line on the screen,\nfollow the dotted line</string>
    <string name="quick_touch_second">Move your finder inside the rectangle to control the disks !</string>

    <string name="congrats_done">Tower solved !</string>
    <string name="congrats_summary">The tower was formed from :tower disk:plurial.</string>
    <string name="congrats_seconds">seconds</string>
    <string name="congrats_perfect">Perfect score !</string>
    <string name="congrats_mouvements">moves</string>
    <string name="congrats_sec">sec</string>
    <string name="congrats_min">min</string>

    <string name="tuto_skip">Skip</string>
    <string name="tuto_skip_end">Skip</string>
    <string name="tuto_help1">Your goal is to move all the disks to the right tower.</string>
    <string name="tuto_help2">You can only move one disk at a time.</string>
    <string name="tuto_help3">A disk can only be on top of a bigger one.</string>
    <string name="tuto_app_name"><b>Tower</b> of <b>Hanoi</b></string>

    <string name="next">Next</string>
    <string name="undo">Undo</string>

</resources>
