<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <fr.mathis.tourhanoipro.view.MorphView
        android:id="@+id/gameView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:pointCount="15"
        app:randomSpeed="12dp"
        app:speed="12dp"
        app:verticalOrientation="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:cardCornerRadius="36dp"
            app:cardPreventCornerOverlap="false">

            <ImageView
                android:id="@+id/ivDrawerLogo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="#888888"
                android:contentDescription="@string/nav_header_desc" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDrawerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tvDrawerSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle" />

    </LinearLayout>
</FrameLayout>