<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent_background_gray">

    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/kvConfetti"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/rl_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:clickable="true"
            android:padding="0dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif-condansed"
                    android:text="@string/congrats_done"
                    android:textColor="@color/congratsTextColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/tv_towerSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/congrats_summary"
                    android:textColor="@color/congratsTextColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_perfect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/congrats_perfect"
                    android:textColor="@color/congratsTextColor"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/tv_movements"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/congratsTextColor"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/congrats_mouvements"
                            android:textColor="@color/congratsLightTextColor"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="@color/congratsLightTextColor"></LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <LinearLayout
                            android:id="@+id/ll_minutes"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="6dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_minutes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/congratsTextColor"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/congrats_min"
                                android:textColor="@color/congratsLightTextColor"
                                android:textSize="12sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="6dp"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_secondes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/congratsTextColor"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_secondes_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/congrats_sec"
                                android:textColor="@color/congratsLightTextColor"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabRestart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:clipToPadding="false"
                android:contentDescription="@string/nothing"
                android:src="@drawable/ic_fab_refresh"
                android:tint="#ffffff"
                app:backgroundTint="?attr/colorAccent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabNextLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:clipToPadding="false"
                android:contentDescription="@string/nothing"
                android:src="@drawable/ic_fab_more"
                android:tint="#ffffff"
                app:backgroundTint="?attr/colorAccent" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>